--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -8,8 +8,8 @@
     <%= product.description %>
   </div>
   <div>
-    <strong class="block font-medium mb-1">Image url:</strong>
-    <%= product.image_url %>
+    <strong class="block font-medium mb-1">Image:</strong>
+    <%= link_to product.image.filename, product.image, class: "text-gray-700 underline hover:no-underline" if product.image.attached? %>
   </div>
   <div>
     <strong class="block font-medium mb-1">Price:</strong>
