--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -14,7 +14,9 @@
         <% @products.each do |product| %>
         <% cache product do %>
         <li class='flex mb-6'>
-            <%= image_tag(product.image, class: 'object-contain w-40 h-48 shadow mr-6') %>
+        <% if product.image.attached? %>
+  <%= image_tag(product.image, class: 'object-contain w-40 h-48 shadow mr-6') %>
+<% end %>
             <div>
                 <h2 class="font-bold text-lg mb-3"><%= product.title %></h2>
                 <p>
@@ -22,10 +24,10 @@
                 </p>
                 <div class="mt-3">
                     <%= number_to_currency(product.price) %>
-                    <%= button_to "Añadir al Carrito",
-   line_items_path(product_id: product),
-   form_class: "inline",
-   class: 'ml-4 rounded-lg py-1 px-2 text-white bg-green-600' %>
+                    <%= button_to 'Add to Cart',
+                        line_items_path(product_id: product),
+                        form_class: "inline",
+                        class: "ml-4 rounded-lg py-1 px-3 text-white bg-green-600 hover:bg-green-700 transition-colors duration-200" %>
                 </div>
             </div>
         </li>
