--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -8,6 +8,10 @@
     <h1 class="font-bold text-xl mb-6 pb-2 border-b-2">
         Your Pragmatic Catalog
     </h1>
+    
+  <% if @cart&.line_items&.empty? %>
+    <p class="text-red-500 font-semibold mb-4">Your cart is currently empty</p>
+  <% end %>
 
     <ul>
         <% cache @products do %>
