--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,40 +1,17 @@
 <div class="w-full">
-    <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice">
-        <%= notice %>
-    </p>
-    <% end %>
+    <%= render 'notice' %>
 
     <h1 class="font-bold text-xl mb-6 pb-2 border-b-2">
         Your Pragmatic Catalog
     </h1>
-    
-  <% if @cart&.line_items&.empty? %>
-    <p class="text-red-500 font-semibold mb-4">Your cart is currently empty</p>
-  <% end %>
+
+    <%= turbo_stream_from 'products' %>
 
     <ul>
         <% cache @products do %>
         <% @products.each do |product| %>
         <% cache product do %>
-        <li class='flex mb-6'>
-        <% if product.image.attached? %>
-  <%= image_tag(product.image, class: 'object-contain w-40 h-48 shadow mr-6') %>
-<% end %>
-            <div>
-                <h2 class="font-bold text-lg mb-3"><%= product.title %></h2>
-                <p>
-                    <%= sanitize(product.description) %>
-                </p>
-                <div class="mt-3">
-                    <%= number_to_currency(product.price) %>
-                    <%= button_to 'Add to Cart',
-                        line_items_path(product_id: product),
-                        form_class: "inline",
-                        class: "ml-4 rounded-lg py-1 px-3 text-white bg-green-600 hover:bg-green-700 transition-colors duration-200" %>
-                </div>
-            </div>
-        </li>
+        <%= render partial: 'product', object: product %>
         <% end %>
         <% end %>
         <% end %>
