--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -15,7 +15,13 @@
       </tr>
     </tfoot>
   </table>
+<%# a div wrapped the 2 bottons optiones %>
+ <div class="flex mt-1"> 
+  <%= button_to 'Empty Cart', cart, method: :delete,
+      class: 'ml-4 rounded-lg py-1 px-2 text-white bg-green-600' %>
 
-  <%= button_to 'Empty Cart', cart, method: :delete, 
-                class: 'mt-4 ml-auto rounded-lg py-1 px-2 text-white bg-red-600 hover:bg-red-700' %>
+  <%= button_to 'Checkout', new_order_path, method: :get,
+      class: 'ml-4 rounded-lg py-1 px-2 text-black bg-green-200' %>
+</div>
+
 </div>
