--- a/app/views/store/_product.html.erb
+++ b/app/views/store/_product.html.erb
@@ -1,6 +1,10 @@
 <%= turbo_frame_tag(dom_id(product)) do %>
   <li class='flex mb-6'>
-    <%= image_tag(product.image, class: 'object-contain w-40 h-48 shadow mr-6') %>
+    
+<%= button_to line_items_path(product_id: product), method: :post, form_class: "inline" do %>
+    <%= image_tag(product.image, class: 'object-contain w-40 h-48 shadow mr-6 hover:scale-105 transition-transform duration-150') %>
+    <% end %>
+
     <div>
       <h2 class="font-bold text-lg mb-3"><%= product.title %></h2>
       <p>
