--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="my-5">
-    <%= form.label :address %>
-    <%= form.textarea :address, rows: 4, class: "input-field" %>
+    <%= form.label :address %>   <!-- Esto genera “Address” -->
+    <%= form.text_area :address, rows: 4, class: "input-field" %>   <!-- Esto genera <textarea id="order_address"> -->
   </div>
 
   <div class="my-5">
