--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   <link rel="apple-touch-icon" href="/icon.png">
   <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
   <%= javascript_importmap_tags %>
+  <%= javascript_include_tag "application", type: "module" %>
+
   <%= turbo_include_tags %>
 
 </head>
