--- a/app/views/orders/_cc.html.erb
+++ b/app/views/orders/_cc.html.erb
@@ -1,11 +1,11 @@
-<fieldset data-payment-target="additionalFields" data-type="Credit card">
+<fieldset>
   <div class="my-5">
-    <%= form.label :credit_card_number %>
+    <%= form.label :credit_card_number, "Credit card number" %>
     <%= form.password_field :credit_card_number, class: "input-field" %>
   </div>
 
   <div class="my-5">
-    <%= form.label :expiration_date %>
+    <%= form.label :expiration_date, "Expiration date" %>
     <%= form.text_field :expiration_date, class: "input-field",
                         size: 9, placeholder: "e.g. 03/22" %>
   </div>
