--- a/app/views/orders/_check.html.erb
+++ b/app/views/orders/_check.html.erb
@@ -1,11 +1,11 @@
-<fieldset data-payment-target="additionalFields" data-type="Check">
+<fieldset>
   <div class="my-5">
-    <%= form.label :routing_number %>
+    <%= form.label :routing_number, "Routing number" %>
     <%= form.text_field :routing_number, class: "input-field" %>
   </div>
 
   <div class="my-5">
-    <%= form.label :account_number %>
+    <%= form.label :account_number, "Account number" %>
     <%= form.password_field :account_number, class: "input-field" %>
   </div>
 </fieldset>
