--- a/app/views/orders/_po.html.erb
+++ b/app/views/orders/_po.html.erb
@@ -1,6 +1,6 @@
-<fieldset data-payment-target="additionalFields" data-type="Purchase order">
+<fieldset>
   <div class="my-5">
-    <%= form.label :po_number %>
+    <%= form.label :po_number, "Po number" %>
     <%= form.number_field :po_number, class: "input-field" %>
   </div>
 </fieldset>
